Fixed build settings and pincode not showing up on Quest

--- a/client/assets/splash-screen.css
+++ b/client/assets/splash-screen.css
@@ -44,7 +44,6 @@
 
 #splash-screen img {
     width: 80%;
-    margin-bottom: 40px;
 }
 
 #splash-screen p {
@@ -92,7 +91,7 @@
 }
 
 table td {
-    font-size: 32px;
+    font-size: 18px;
     padding: 10px;
     cursor: pointer;
 }
